--- a/action.yaml
+++ b/action.yaml
@@ -31,4 +31,4 @@ inputs:
 runs:
   using: docker
   #image: docker://ghcr.io/trstringer/manual-approval:1.9.0
-  image: docker://harbor.jenkins-x-viettel.iviet.com/sys/manual-approval:1.9.0
+  image: docker://asia-southeast1-docker.pkg.dev/olli-iviet/public/manual-approval:1.9.0
